# rem-sdk

./: .env.example  .gitignore  Dockerfile  README.md  input.md  next.config.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json
prisma/: schema.prisma
prisma/migrations/20260318200128_init/: migration.sql
programs/clearinghouse/: Cargo.toml
programs/clearinghouse/src/: lib.rs
programs/clearinghouse/tests/: clearinghouse.ts
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
programs/registry/tests/: registry.ts
scripts/: approve-mint.mjs  mint-mock_usdc.ts  seed.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/compliance/: route.ts
src/app/api/dashboard/: route.ts
src/app/api/mint-request/: route.ts
src/app/api/mint-request/[id]/: route.ts
src/app/api/redeem-request/: route.ts
src/app/api/redeem-request/[id]/confirm-fiat/: route.ts
src/app/api/seed/: route.ts
src/app/api/stablecoins/: route.ts
src/app/api/token-balance/: route.ts
src/app/compliance/: page.tsx
src/app/mint/: page.tsx
src/app/redeem/: page.tsx
src/app/transactions/: page.tsx
src/components/: AppShell.tsx  Card.tsx  MockAuthProvider.tsx  PhantomWalletProvider.tsx  Sidebar.tsx  StatusBadge.tsx  TopBar.tsx
src/lib/: db.ts  demo-types.ts  placeholder-entity.ts  seed.ts  solana.ts
