[package]
name = "registry"
version = "0.1.0"
description = "REM Issuer Registry — on-chain network directory (Phase 2)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
